--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,11 @@ researchgate_username: Autonomy-and-Verification-Lab-Michael-Fisher
 
 # URLS
 UoL_URL: https://www.liverpool.ac.uk/computer-science/
+UoM_URL:  https://www.cs.manchester.ac.uk/
 UoY_URL: https://www.cs.york.ac.uk/
 AA_URL: https://www.york.ac.uk/assuring-autonomy/
 ONR_URL: http://www.onr.org.uk/
 NCNR_HUB_URL: https://www.ncnr.org.uk/
 RAIN_HUB_URL: https://rainhub.org.uk/
+ORCA_HUB_URL: https://orcahub.org/
 VV_NETWORK_URL: https://vavas.org/
