New tools section, associated changes to the layouts, nav, and config; and four rough drafts of tool pages.

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,8 @@ destination: _site
 collections:
   events:
     output: true
+  tools:
+    output: true
   projects:
     output: false
   projects-previous:
