Updating the twitter account for the nav bad

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -1,6 +1,6 @@
 - icon: "fab fa-twitter"
   description: "Twitter"
-  href: "https://twitter.com/LivUni_AVLab"
+  href: "https://twitter.com/AandVNetwork"
 
 - icon: "fab fa-researchgate"
   description: "ResearchGate"
