--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,13 @@ collections:
 
 permalink: /blog/:year/:title
 
+gems:
+  - jekyll-redirect-from
+
+# mimic GitHub Pages with --safe
+whitelist:
+  - jekyll-redirect-from
+
 address:
   - line:
 
