--- a/_data/members.yml
+++ b/_data/members.yml
@@ -57,7 +57,7 @@ CurrentMembers:
         website: "https://www.mluckcuck.github.io/"
         orcid: "https://orcid.org/0000-0002-6444-9312"
         
-  - Institute : "University of Genoa"
+  - Institute : "University of Genova"
     MembersList :
       - name : "Dr Angelo Ferrando"
         website: "https://angeloferrando.github.io/website/"
