--- a/_data/members.yml
+++ b/_data/members.yml
@@ -6,7 +6,7 @@ CurrentMembers:
         orcid: "https://orcid.org/0000-0001-6666-6954"
 
       - name : "Dr Emily C. Collins"
-        website: "https://www.liverpool.ac.uk/computer-science/staff/emily-collins/"
+        website: "https://www.research.manchester.ac.uk/portal/en/researchers/emily-collins(3c6b7f4a-7088-443f-a641-654c99a426e6).html"
         orcid : "https://orcid.org/0000-0001-9396-536X"
 
       - name : "Dr Louise Dennis"
