--- a/_data/members.yml
+++ b/_data/members.yml
@@ -21,6 +21,7 @@ CurrentMembers:
         
       - name : "Dr Fatma Faruq"
         website: "https://fatmaf.github.io/"
+        orcid: "https://orcid.org/0000-0001-6928-0176"
 
       - name : "Prof. Michael Fisher"
         website: "https://personalpages.manchester.ac.uk/staff/michael.fisher/"
