--- a/_data/members.yml
+++ b/_data/members.yml
@@ -7,10 +7,6 @@ CurrentMembers:
         
       - name : "Dr Joe Collenette"
 
-      - name : "Dr Emily C. Collins"
-        website: "https://www.research.manchester.ac.uk/portal/en/researchers/emily-collins(3c6b7f4a-7088-443f-a641-654c99a426e6).html"
-        orcid : "https://orcid.org/0000-0001-9396-536X"
-
       - name : "Dr Louise Dennis"
         website : "https://personalpages.manchester.ac.uk/staff/louise.dennis/"
         orcid : "https://orcid.org/0000-0003-1426-1896"
@@ -98,7 +94,11 @@ AffiliatedMembers:
 
       - name : "Dr Vince Page"
 
-
+  - Institute : "Institute for Experiential Robotics, Northeastern University"
+    MembersList: 
+      - name : "Dr Emily C. Collins"
+        website: "https://www.nchlondon.ac.uk/faculty/dr-emily-collins/"
+        orcid : "https://orcid.org/0000-0001-9396-536X"
 
 PreviousMembers:
   - name : "Dr Elisa Cucco"
