--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -14,6 +14,8 @@
     subhref: "/projects"
   - subtitle: "Videos"
     subhref: "/videos"
+  - subtitle: "Use Cases"
+    subhref: "/usecases"
 
 - title: "Publications"
   href: "/publications"
