--- a/_data/members.yml
+++ b/_data/members.yml
@@ -101,6 +101,7 @@ AffiliatedMembers:
         orcid: "https://orcid.org/0000-0003-4760-0372"
         
       - name: "Dr Vince Page"
+        website: "https://www.liverpool.ac.uk/computer-science/staff/vincent-steven-page/"
       
   - Institute: "Virtual Engineering Centre"
     MembersList:
