--- a/_data/members.yml
+++ b/_data/members.yml
@@ -89,6 +89,11 @@ CurrentMembers:
       - name: "Dr Matt Luckcuck"
         website: "https://mluckcuck.github.io/"
         orcid: "https://orcid.org/0000-0002-6444-9312"
+        
+   - Institute: "Sapienza Università di Roma"
+   MembersList:
+      - name: "Ramon Fraga Pereira"
+      website: "https://www.ramonfpereira.com/"
 
 AffiliatedMembers:
   - Institute: "University of Manchester"
