--- a/_data/members.yml
+++ b/_data/members.yml
@@ -6,7 +6,7 @@ CurrentMembers:
         orcid: "https://orcid.org/0000-0003-1872-4771"
     
       - name: "Dr Joe Collenette"
-        website: "https://dblp.org/pid/181/8354.html"
+        website: "https://joecol.github.io/"
 
       - name: "Dr Louise Dennis"
         website: "https://personalpages.manchester.ac.uk/staff/louise.dennis/"
