Moving me and Marie around

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -15,6 +15,10 @@ CurrentMembers:
       - name: "Prof. Clare Dixon"
         website: "https://www.research.manchester.ac.uk/portal/clare.dixon.html"
         orcid: "https://orcid.org/0000-0002-4610-9533"
+      
+       - name: "Dr Marie Farrell"
+        website: "https://mariefarrell.github.io/"
+        orcid: "https://orcid.org/0000-0001-7708-3877"
 
       - name: "Dr Fatma Faruq"
         website: "https://fatmaf.github.io/"
@@ -53,7 +57,7 @@ CurrentMembers:
       - name: "Dr Youcheng Sun"
         website: "https://www.research.manchester.ac.uk/portal/youcheng.sun.html"
         
-      - name: "Sen Zheng"
+      - name: "Dr Sen Zheng"
         website: "https://senzhengsz.github.io/szheng/"
 
   - Institute: "University of Aberdeen"
@@ -80,12 +84,8 @@ CurrentMembers:
         website: "http://www.matt-webster.com/"
         orcid: "https://orcid.org/0000-0002-8817-6881"
 
-  - Institute: "Maynooth University"
-    MembersList :
-      - name: "Dr Marie Farrell"
-        website: "https://mariefarrell.github.io/"
-        orcid: "https://orcid.org/0000-0001-7708-3877"
-
+  - Institute: "University of Derby"
+    MembersList :     
       - name: "Dr Matt Luckcuck"
         website: "https://mluckcuck.github.io/"
         orcid: "https://orcid.org/0000-0002-6444-9312"
