Realigning the members columns, and applying the same box style to other pages where I've used it, or it looked ok to use.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -66,31 +66,31 @@ CurrentMembers:
         website: "https://rafaelcaue.github.io/"
         orcid: "https://orcid.org/0000-0001-6666-6954"
 
-  - Institute: "University of Genova"
-    MembersList :
-      - name: "Dr Angelo Ferrando"
-        website: "https://angeloferrando.github.io/website/"
-        orcid: "https://orcid.org/0000-0002-8711-4670"
-
   - Institute: "<a href='https://robotics.northeastern.edu/' target='_blank' rel='noopener noreferrer'>Northeastern University - Institute for Experiential Robotics</a>"
     MembersList:
       - name: "Dr Emily C. Collins"
-        website: "https://www.nchlondon.ac.uk/faculty/dr-emily-collins/"
-        alt-website: "https://coe.northeastern.edu/people/collins-emily/"
+        website: "https://coe.northeastern.edu/people/collins-emily/"
+        alt-website:  "https://www.nchlondon.ac.uk/faculty/dr-emily-collins/"
         orcid: "https://orcid.org/0000-0001-9396-536X"
-        scholar : "Test"
-
-  - Institute: "Liverpool John Moores University"
-    MembersList:
-      - name: "Dr Matt Webster"
-        website: "http://www.matt-webster.com/"
-        orcid: "https://orcid.org/0000-0002-8817-6881"
+        scholar : "https://scholar.google.co.uk/citations?user=OIcNb2QAAAAJ&hl"
 
   - Institute: "University of Derby"
     MembersList :
       - name: "Dr Matt Luckcuck"
         website: "https://mluckcuck.github.io/"
         orcid: "https://orcid.org/0000-0002-6444-9312"
+
+  - Institute: "University of Genova"
+    MembersList :
+      - name: "Dr Angelo Ferrando"
+        website: "https://angeloferrando.github.io/website/"
+        orcid: "https://orcid.org/0000-0002-8711-4670"
+
+  - Institute: "Liverpool John Moores University"
+    MembersList:
+      - name: "Dr Matt Webster"
+        website: "http://www.matt-webster.com/"
+        orcid: "https://orcid.org/0000-0002-8817-6881"
 
   - Institute: "Sapienza Università di Roma"
     MembersList :
