--- a/_data/members.yml
+++ b/_data/members.yml
@@ -57,7 +57,11 @@ CurrentMembers:
         website: "https://www.research.manchester.ac.uk/portal/youcheng.sun.html"
 
       - name: "Dr Sen Zheng"
-        website: "https://senzhengsz.github.io/szheng/"
+        website: "https://senzhengsz.github.io/szheng/"       
+      
+      - name: "Dr Mengwei Xu"
+        website: "https://mengweixu.netlify.app/"
+        orcid: "https://orcid.org/0000-0003-4978-3061"        
 
   - Institute: "University of Aberdeen"
     MembersList:
