--- a/_data/members.yml
+++ b/_data/members.yml
@@ -24,6 +24,8 @@ CurrentMembers:
         website: "https://personalpages.manchester.ac.uk/staff/michael.fisher/"
         orcid: "https://orcid.org/0000-0002-0875-3862"
 
+      - name: "Diana Benjumea Hernandez"
+
       - name: "Simon Kolker"
         website: "https://www.linkedin.com/in/simonkolker/?originalSubdomain=uk"
 
