--- a/_data/members.yml
+++ b/_data/members.yml
@@ -25,7 +25,9 @@ CurrentMembers:
         orcid: "https://orcid.org/0000-0002-0875-3862"
 
       - name: "Diana Benjumea Hernandez"
-
+        website: "https://dianabenjumea.github.io/"
+        orcid: "https://orcid.org/0000-0003-1840-7178"
+        
       - name: "Simon Kolker"
         website: "https://www.linkedin.com/in/simonkolker/?originalSubdomain=uk"
 
